# Hey-Steve

./: .gitignore  LLMAgent.py  LLMClient.py  README.md  combine_sentences.py  extract.ipynb  extract_info.py  get_page_names.py  helpers.py  html_to_markdown.py  lightrag_test.py  long_ctx_ollama_model  mobs.txt  pyproject.toml  rag.ipynb  requirements.txt  run.py  run_mcp.py  scrape.ipynb  scrape_page.py  temp.md  test.ipynb  test.py  test_609k.py
chroma/: chroma.sqlite3
data_preparation/: LLMClient.py  html_to_markdown.py
dickens/: kv_store_doc_status.json  kv_store_llm_response_cache.json
download_scripts/: base.txt  biome.txt  block.txt  blocks.txt  download_webpages.sh  effect.txt  enchantment.txt  item.txt  mob.txt  mobs.txt  smithing.txt  structure.txt  tutorials.txt
hey_steve/LLMs/: LLMClient.py  __init__.py
hey_steve/agent/: __init__.py  agent.py
hey_steve/agents_and_tools/: __init__.py  loot_table_tool.py  rag_tool.py  recipe_tool.py  retriever_tool.py
hey_steve/fine_tuning/: __init__.py  answer_chunk_generator.py  fine_tune_embedding.py  llm_generate_quesitons.py  raw_embedding.ipynb  tuned_embedding.ipynb  utils.py
hey_steve/ingestion/: check_too_short.sh  get_page_names.py  html_to_markdown.py
hey_steve/processing/: __init__.py  chunk_custom.py  chunk_length_distribution.py  chunk_markdown.py  chunking.py  chunking_helper.py  chunking_new.py  contextual_embedding.py  (+4 more)
prompt_template/: extract_property.txt
test/: clean_qa_data.ipynb  clean_qa_data.py  temp.txt  test_qa.py
urls/: blocks.txt  general.txt  items.txt  mobs.txt
(+31 files in other folders)
