[project]
name = "hey-steve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "einops>=0.8.1",
    "fuzzywuzzy>=0.18.0",
    "html2text>=2024.2.26",
    "langchain>=0.3.20",
    "langchain-text-splitters>=0.3.6",
    "litellm>=1.63.11",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sentence-transformers>=3.4.1",
    "smolagents[gradio,litellm,telemetry]>=1.11.0",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
